Make Iteration 3: recipe page content
Fill Lasagna recipe page with images and text

Add css with properly img tag scaled

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpg" alt="Image of Lasagna">
+    <h2>Description</h2>
+    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, vegetables, cheeses, and seasonings and spices.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lasagna</li>
+        <li>Pasta</li>
+        <li>Cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the pasta</li>
+        <li>Make the cheese</li>
+        <li>Make the lasagna</li>
+        <li>Enjoy!</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
