Add correct styling to recipe image
Fix aspect ration and size

--- a/recipes/russian-salad.html
+++ b/recipes/russian-salad.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Russian Salad</h1>
-    <img src="../images/russian-salad.jpg" alt="Image of Russian Salad">
+    <img class="recipe-image" src="../images/russian-salad.jpg" alt="Image of Russian Salad">
     <h2>Description</h2>
     <p>Russian salad is a popular dish in Russia, consisting of a mix of vegetables and mayonnaise. It is often served as a side dish or as a main course.</p>
     <h2>Ingredients</h2>
