--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="Image of Lasagna">
+    <img class="recipe-image" src="../images/lasagna.jpg" alt="Image of Lasagna">
     <h2>Description</h2>
     <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, vegetables, cheeses, and seasonings and spices.</p>
     <h2>Ingredients</h2>
