--- a/recipes/pelmeni.html
+++ b/recipes/pelmeni.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Russian Pelmeni (Meat Dumplings)</h1>
-    <img src="../images/pelmeni.webp" alt="Image of Pelmeni">
+    <h1>Pelmeni</h1>
+    <img class="recipe-image" src="../images/pelmeni.webp" alt="Photo of cooked Pelmeni">
+    <h2>Description</h2>
     <h2>Ingredients</h2>
     <ul>
         <li>All-purpose flour (for dough)</li>
