Update recipe details for Lasagna, Russian Salad, and Pelmeni

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,21 +8,36 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img class="recipe-image" src="../images/lasagna.webp" alt="Image of Lasagna">
+    <img class="recipe-image" src="../images/lasagna.webp" alt="A delicious slice of homemade lasagna">
     <h2>Description</h2>
-    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, vegetables, cheeses, and seasonings and spices.</p>
+    <p>Classic Lasagna Bolognese is the ultimate comfort food. Layers of wide pasta sheets baked with a rich, meaty tomato sauce (ragù), creamy béchamel or ricotta cheese filling, and generously topped with melted mozzarella and Parmesan cheese. A truly satisfying dish perfect for family dinners or special occasions.</p>
+    
     <h2>Ingredients</h2>
     <ul>
-        <li>Lasagna</li>
-        <li>Pasta</li>
-        <li>Cheese</li>
+        <li>Lasagna noodles (oven-ready or regular)</li>
+        <li>Ground beef or Italian sausage (or a mix)</li>
+        <li>Onion, chopped</li>
+        <li>Garlic, minced</li>
+        <li>Crushed tomatoes</li>
+        <li>Tomato paste</li>
+        <li>Dried oregano and basil</li>
+        <li>Salt and pepper</li>
+        <li>Ricotta cheese (or Béchamel sauce)</li>
+        <li>Egg (if using ricotta)</li>
+        <li>Fresh parsley, chopped</li>
+        <li>Mozzarella cheese, shredded</li>
+        <li>Parmesan cheese, grated</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
-        <li>Make the pasta</li>
-        <li>Make the cheese</li>
-        <li>Make the lasagna</li>
-        <li>Enjoy!</li>
+        <li><strong>Make the Meat Sauce:</strong> Brown the ground meat with onion and garlic. Drain excess fat. Stir in crushed tomatoes, tomato paste, oregano, basil, salt, and pepper. Simmer for at least 20-30 minutes to let flavors meld.</li>
+        <li><strong>Prepare Noodles:</strong> If using regular noodles, cook according to package directions until al dente. Drain and rinse with cold water. If using oven-ready, skip this step.</li>
+        <li><strong>Prepare Cheese Filling:</strong> If using ricotta, mix it with the egg, parsley, and a pinch of salt and pepper. If using Béchamel, prepare it according to your preferred recipe.</li>
+        <li><strong>Assemble the Lasagna:</strong> Spread a thin layer of meat sauce on the bottom of a baking dish. Arrange a layer of noodles over the sauce. Spread a layer of the cheese filling (ricotta or Béchamel) over the noodles. Sprinkle with mozzarella and Parmesan. Repeat layers: meat sauce, noodles, cheese filling, mozzarella/Parmesan, ending with a final layer of noodles topped with remaining meat sauce and a generous amount of mozzarella and Parmesan.</li>
+        <li><strong>Bake:</strong> Cover the baking dish with foil and bake in a preheated oven at 375°F (190°C) for 25-30 minutes. Remove the foil and bake for another 20-25 minutes, or until the top is bubbly and golden brown.</li>
+        <li><strong>Rest:</strong> Let the lasagna rest for at least 10-15 minutes before slicing and serving. This helps it hold its shape.</li>
+        <li>Enjoy your delicious homemade lasagna!</li>
     </ol>
     <a href="../index.html">Home</a>
 </body>
