--- a/recipes/russian-salad.html
+++ b/recipes/russian-salad.html
@@ -7,23 +7,34 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Russian Salad</h1>
-    <img class="recipe-image" src="../images/russian-salad.webp" alt="Image of Russian Salad">
+    <h1>Russian Salad (Olivier Salad)</h1>
+    <img class="recipe-image" src="../images/russian-salad.webp" alt="A bowl of classic Russian Olivier Salad">
     <h2>Description</h2>
-    <p>Russian salad is a popular dish in Russia, consisting of a mix of vegetables and mayonnaise. It is often served as a side dish or as a main course.</p>
+    <p>Often called Olivier Salad (Салат Оливье), this is arguably the most iconic salad in Russia and many former Soviet countries. It's a staple at holiday celebrations and family gatherings. This classic version features a creamy mix of diced boiled vegetables, eggs, pickles, and often a protein like chicken or bologna, all bound together with mayonnaise.</p>
+    
     <h2>Ingredients</h2>
     <ul>
-        <li>Carrots</li>
-        <li>Potatoes</li>
-        <li>Cucumber</li>
-        <li>Mayonnaise</li>
+        <li>3-4 medium Potatoes</li>
+        <li>2-3 medium Carrots</li>
+        <li>4-5 large Eggs</li>
+        <li>1 cup canned Green Peas, drained</li>
+        <li>4-5 medium Dill Pickles (or Gherkins), finely chopped</li>
+        <li>Optional: 1 cup cooked Chicken breast or Ham/Bologna, diced</li>
+        <li>1/2 small Onion, finely chopped (optional, adds sharpness)</li>
+        <li>Approx. 1 cup Mayonnaise (adjust to desired creaminess)</li>
+        <li>Salt and freshly ground Black Pepper to taste</li>
+        <li>Fresh Dill or Parsley for garnish (optional)</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
-        <li>Boil the carrots and potatoes until they are tender.</li>
-        <li>Chop the vegetables into small pieces.</li>
-        <li>Mix the vegetables with mayonnaise.</li>
-        <li>Enjoy!</li>
+        <li><strong>Cook Vegetables & Eggs:</strong> Boil potatoes and carrots (in their skins) until tender but still firm. Boil eggs until hard-cooked. Let everything cool completely.</li>
+        <li><strong>Dice Ingredients:</strong> Peel the cooled potatoes, carrots, and eggs. Dice them into small, uniform cubes (about 1/4 inch or 0.5 cm). Finely chop the dill pickles and onion (if using). If adding meat, dice it to a similar size.</li>
+        <li><strong>Combine:</strong> In a large bowl, combine the diced potatoes, carrots, eggs, pickles, green peas, onion (if using), and meat (if using).</li>
+        <li><strong>Dress the Salad:</strong> Add mayonnaise gradually, mixing gently until all ingredients are coated to your desired consistency. Be careful not to mash the vegetables.</li>
+        <li><strong>Season:</strong> Season generously with salt and freshly ground black pepper to taste. Mix again gently.</li>
+        <li><strong>Chill:</strong> For best flavor, cover the salad and refrigerate for at least 1-2 hours (or overnight) to allow the flavors to meld.</li>
+        <li><strong>Serve:</strong> Stir gently before serving. Garnish with fresh dill or parsley if desired. Serve chilled as a side dish or appetizer.</li>
     </ol>
     <a href="../index.html">Home</a>
 </body>
