--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/pelmeni.html">Pelmeni</a></li>
-        <li><a href="recipes/russian-salad.html">Russian Salad</a></li>
-    </ul>
+    <div class="main-menu">
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li class="recipe-item"><img src="images/lasagna.webp" alt="" width="30" height="30"><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li class="recipe-item"><img src="images/pelmeni.webp" alt="" width="30" height="30"><a href="recipes/pelmeni.html">Pelmeni</a></li>
+            <li class="recipe-item"><img src="images/russian-salad.webp" alt="" width="30" height="30"><a href="recipes/russian-salad.html">Russian Salad</a></li>
+        </ul>
+    </div>
 </body>
 </html>
