--- a/recipes/pelmeni.html
+++ b/recipes/pelmeni.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Pelmeni</h1>
-    <img class="recipe-image" src="../images/pelmeni.webp" alt="Photo of cooked Pelmeni served with sour cream">
-    <h2>Description</h2>
-    <p>Pelmeni are traditional Russian dumplings, consisting of a savory meat filling wrapped in thin, unleavened dough. Often considered the heart of Russian comfort food, these bite-sized delights are typically boiled and served with a dollop of sour cream (smetana), butter, vinegar, or broth. Making them from scratch is a rewarding, often communal, activity.</p>
+    <div class="recipe-container">
+        <h1>Pelmeni</h1>
+        <img class="recipe-image" src="../images/pelmeni.webp" alt="Photo of cooked Pelmeni served with sour cream">
+        <h2>Description</h2>
+        <p>Pelmeni are traditional Russian dumplings, consisting of a savory meat filling wrapped in thin, unleavened dough. Often considered the heart of Russian comfort food, these bite-sized delights are typically boiled and served with a dollop of sour cream (smetana), butter, vinegar, or broth. Making them from scratch is a rewarding, often communal, activity.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>All-purpose flour (for dough)</li>
-        <li>Water & Salt (for dough)</li>
-        <li>Ground meat (beef/pork mix recommended)</li>
-        <li>Onion, finely chopped (for filling)</li>
-        <li>Salt & Pepper (for filling seasoning)</li>
-    </ul>
-    
-    <h2>Steps</h2>
-    <ol>
-        <li><strong>Make the Dough:</strong> In a bowl, mix flour, water, and a pinch of salt. Knead on a lightly floured surface until the dough becomes smooth and elastic (about 5-10 minutes). Cover with plastic wrap or a damp cloth and let it rest for at least 30 minutes.</li>
-        <li><strong>Prepare the Filling:</strong> While the dough rests, combine the ground meat (beef/pork mix is classic), finely chopped onion, salt, and pepper in a separate bowl. Mix thoroughly until well combined.</li>
-        <li><strong>Assemble Pelmeni:</strong> Divide the rested dough into manageable portions. Roll out one portion very thinly on a floured surface. Use a small glass or round cutter (about 2 inches/5 cm) to cut out circles. Place about a teaspoon of the meat filling in the center of each dough circle. Fold the circle in half to form a crescent, pressing the edges firmly to seal. Then, bring the two corners of the crescent together and pinch them to create the characteristic pelmeni shape. Repeat with remaining dough and filling. Place formed pelmeni on a floured board or baking sheet, ensuring they don't touch.</li>
-        <li><strong>Cook:</strong> Bring a large pot of salted water to a rolling boil. You can add a bay leaf or peppercorns for extra flavor. Carefully add the pelmeni (cook in batches if necessary to avoid overcrowding). Once they float to the surface (after a few minutes), continue boiling for another 5-7 minutes, or until the filling is cooked through.</li>
-        <li><strong>Serve:</strong> Use a slotted spoon to remove the cooked pelmeni from the pot, allowing excess water to drain. Serve immediately.</li>
-        <li><strong>Enjoy:</strong> The most common way to enjoy pelmeni is with a generous dollop of sour cream (smetana) or a knob of melted butter. Some also like them with a splash of vinegar or served in the cooking broth.</li>
-    </ol>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>All-purpose flour (for dough)</li>
+            <li>Water & Salt (for dough)</li>
+            <li>Ground meat (beef/pork mix recommended)</li>
+            <li>Onion, finely chopped (for filling)</li>
+            <li>Salt & Pepper (for filling seasoning)</li>
+        </ul>
+        
+        <h2>Steps</h2>
+        <ol>
+            <li><strong>Make the Dough:</strong> In a bowl, mix flour, water, and a pinch of salt. Knead on a lightly floured surface until the dough becomes smooth and elastic (about 5-10 minutes). Cover with plastic wrap or a damp cloth and let it rest for at least 30 minutes.</li>
+            <li><strong>Prepare the Filling:</strong> While the dough rests, combine the ground meat (beef/pork mix is classic), finely chopped onion, salt, and pepper in a separate bowl. Mix thoroughly until well combined.</li>
+            <li><strong>Assemble Pelmeni:</strong> Divide the rested dough into manageable portions. Roll out one portion very thinly on a floured surface. Use a small glass or round cutter (about 2 inches/5 cm) to cut out circles. Place about a teaspoon of the meat filling in the center of each dough circle. Fold the circle in half to form a crescent, pressing the edges firmly to seal. Then, bring the two corners of the crescent together and pinch them to create the characteristic pelmeni shape. Repeat with remaining dough and filling. Place formed pelmeni on a floured board or baking sheet, ensuring they don't touch.</li>
+            <li><strong>Cook:</strong> Bring a large pot of salted water to a rolling boil. You can add a bay leaf or peppercorns for extra flavor. Carefully add the pelmeni (cook in batches if necessary to avoid overcrowding). Once they float to the surface (after a few minutes), continue boiling for another 5-7 minutes, or until the filling is cooked through.</li>
+            <li><strong>Serve:</strong> Use a slotted spoon to remove the cooked pelmeni from the pot, allowing excess water to drain. Serve immediately.</li>
+            <li><strong>Enjoy:</strong> The most common way to enjoy pelmeni is with a generous dollop of sour cream (smetana) or a knob of melted butter. Some also like them with a splash of vinegar or served in the cooking broth.</li>
+        </ol>
 
-    <a href="../index.html">Home</a>
+        <a class="home-link" href="../index.html">Home</a>
+    </div>
 </body>
 </html>
