--- a/recipes/russian-salad.html
+++ b/recipes/russian-salad.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <div class="recipe-container">
     <h1>Russian Salad (Olivier Salad)</h1>
     <img class="recipe-image" src="../images/russian-salad.webp" alt="A bowl of classic Russian Olivier Salad">
     <h2>Description</h2>
@@ -36,6 +37,7 @@
         <li><strong>Chill:</strong> For best flavor, cover the salad and refrigerate for at least 1-2 hours (or overnight) to allow the flavors to meld.</li>
         <li><strong>Serve:</strong> Stir gently before serving. Garnish with fresh dill or parsley if desired. Serve chilled as a side dish or appetizer.</li>
     </ol>
-    <a href="../index.html">Home</a>
+    <a class="home-link" href="../index.html">Home</a>
+    </div>
 </body>
 </html>
